--- a/startup-ng0001/src/index.html
+++ b/startup-ng0001/src/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-  <stang-root></stang-root>
+  <stang-root>
+    <div class="ui active inverted dimmer">
+      <div class="ui text loader large">Loading Application...</div>
+    </div>
+  </stang-root>
 </body>
 
 </html>
